--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "webpack": "^5.94.0",
